# purplegate

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE-3RD-PARTY.md  README.md  SECURITY.md  THREAT_MODEL.md  action.yml  pyproject.toml  renovate.json
.agent-redblue/: config.yml
.github/: CODEOWNERS  dependabot.yml  repo-metadata.yml
.github/workflows/: audit-consumer.yml  codeql.yml  release.yml  scorecard.yml  self-test.yml
.purplegate/: config.yml
assets/: README.md
config/: defaults.yml
config/schemas/: config.schema.json  findings.schema.json
docs/: CONFIG.md  PROBES.md  QUICKSTART.md  SEVERITY.md  SUPPLY_CHAIN.md  SUPPRESSIONS.md  TAXONOMY.md  TRANSLATIONS.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt.md  README.ru.md  README.tr.md  README.zh.md
src/: __init__.py  config_loader.py  models.py  orchestrator.py
src/blueteam/: __init__.py  evaluator.py  hardening_registry.py
src/judge/: __init__.py  judge.py  rubric_v1.py
src/payloads/: custom_chat.yaml  custom_receipt.yaml  custom_voice.yaml
src/probes/: __init__.py  base.py  deps.py  headers.py  iac.py  mcp.py  prompt_injection.py  sast.py  sbom.py  secrets.py  workflows.py
src/report/: __init__.py  gate.py  markdown.py  sarif.py
src/taxonomy/: mitre_atlas_v5_4_0.yml  owasp_agentic_2026.yml  owasp_llm_top10_v2025.yml
tests/: conftest.py
tests/fixtures/clean_app/.purplegate/: config.yml
tests/fixtures/vuln_fastapi/.agent-redblue/: config.yml
tests/fixtures/vuln_supabase_sql/.purplegate/: config.yml
tests/fixtures/vuln_workflow/.purplegate/: config.yml
tests/unit/: test_blueteam.py  test_gate_and_allowlist.py  test_iac.py  test_judge_sanitize.py  test_sast_fastapi.py  test_workflows_fallback.py
(+8 files in other folders)
